Phone done, tablet problem section content

--- a/index.html
+++ b/index.html
@@ -13,32 +13,31 @@
         <div class="container">
             <header>
                 <h1><span>rogue</span> pickings</h1>
-                <br>
-            </header>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="">About</a>
+                        </li>
+                        <li>
+                            <a href="">Menu</a>
+                        </li>
+                        <li>
+                            <a href="">Locations</a>
+                        </li>
+                        <li>
+                            <a href="">Gallery</a>
+                        </li>
+                        <li>
+                            <a href="">Reviews</a>
+                        </li>
+                        <li>
+                            <a href="">Contact</a>
+                        </li>
+                    </ul>
+                </nav>            </header>
 
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">About</a>
-                    </li>
-                    <li>
-                        <a href="">Menu</a>
-                    </li>
-                    <li>
-                        <a href="">Locations</a>
-                    </li>
-                    <li>
-                        <a href="">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="">Reviews</a>
-                    </li>
-                    <li>
-                        <a href="">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-<!--
+            
+
             <section class="top-section">
                 <div class="main-image"><img src="img/download.jpg" alt="green beans" /></div>
                 <div class="main-title">
@@ -62,13 +61,13 @@
                     <p class="reviews">"I got so excited about the yumminess of the falafel salad that I am typing this review as I inhale my lunch. Yes it is that good.... Service was super friendly and quick. Can't wait see you Rogue Pickings again tomorrow!"</p>
                 </div>
                 <div class="section-three"><h4>Contact</h4>
-                    <p class="address">1001 Potrero Avenue<br>
-                        San Francisco, CA 94110<br>
+                    <p class="address">1001 Potrero Avenue
+                        San Francisco, CA 94110
                         (415) 206-8000 </p>
                 </div>
             </section>
 
--->
+
             <footer>
                 <h4>Powered by lots of <span>fresh</span> ingredients.</h4>
             </footer>
